# SimpleDeathCounter

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main_widget.cpp  main_widget.h  main_widget.ui
